# Task4_Verification_Pipeline

./: README.md  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: pr.yml
docs/: README.md  verification_process.md
ros2_ws/src/rover_autonomy/: CMakeLists.txt  package.xml  setup.py
ros2_ws/src/rover_autonomy/config/: slam_config.yaml
ros2_ws/src/rover_autonomy/launch/: gazebo_sim.launch.py
ros2_ws/src/rover_autonomy/scripts/: arrow_detection.py
ros2_ws/src/rover_autonomy/tests/: __init__.py  test_arrow_detection.py
scripts/: run_hil_test.sh  run_static_analysis.sh  setup_verification.sh
teensy_sketches/sketches/: imu_publisher.ino
teensy_sketches/tests/: servo_control_test.ino
