<?xml version="1.0"?>
<package format="3">
  <name>rover_autonomy</name>
  <version>0.0.1</version>
  <description>Automation tasks for IRC 2025 rover</description>
  <maintainer email="team@example.com">Your Team</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
